[package]

name = "npnc"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.0.1"

readme = "README.md"
license = "Apache-2.0"

description = "Lock-free queues."

documentation = "https://kylemayes.github.io/npnc/npnc"
repository = "https://github.com/KyleMayes/npnc"

[dependencies]

clippy = { version = "0.0.*", optional = true }
