[package]

name = "npnc"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.2.0"

readme = "README.md"
license = "Apache-2.0"

description = "Lock-free queues."

documentation = "https://docs.rs/npnc"
repository = "https://github.com/KyleMayes/npnc"

[features]

valgrind = []

[dependencies]

hazard = "0.3.0"

clippy = { version = "0.0.*", optional = true }

[dev-dependencies]

queuecheck = "0.1.0"

[[test]]

name = "tests"
harness = false

[[bench]]

name = "benches"
harness = false
