[package]

name = "npnc"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.2.1"

readme = "README.md"
license = "Apache-2.0"

description = "Lock-free queues."

documentation = "https://docs.rs/npnc"
repository = "https://github.com/KyleMayes/npnc"

keywords = ["queue", "spsc", "mpmc", "bounded", "unbounded"]

[features]

valgrind = []

[dependencies]

hazard = "0.3.0"

[dev-dependencies]

queuecheck = "0.1.0"

[[test]]

name = "tests"
harness = false

[[bench]]

name = "benches"
harness = false
